--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "defaults"
   ],
   "dependencies": {
-    "@ant-design/icons": "^4.8.3",
+    "@ant-design/icons": "^5.5.2",
     "@ant-design/pro-components": "^2.7.19",
     "antd": "^5.21.2",
     "antd-style": "^3.7.0",
@@ -75,6 +75,7 @@
     "lint-staged": "^15.2.10",
     "mockjs": "^1.1.0",
     "prettier": "^3.3.3",
+    "swagger-ui-dist": "^5.18.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3",
     "umi-presets-pro": "^2.0.3",
