--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
   "dependencies": {
     "@ant-design/icons": "^5.6.1",
     "@ant-design/pro-components": "^2.8.9",
-    "antd": "^5.26.4",
     "@ant-design/v5-patch-for-react-19": "^1.0.3",
+    "antd": "^5.26.4",
     "antd-style": "^3.7.0",
     "classnames": "^2.5.1",
     "dayjs": "^1.11.13",
@@ -47,12 +47,14 @@
   },
   "devDependencies": {
     "@ant-design/pro-cli": "^3.3.0",
+    "@biomejs/biome": "^2.1.1",
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.3.0",
     "@types/express": "^5.0.3",
     "@types/jest": "^30.0.0",
+    "@types/node": "^24.0.13",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@types/react-helmet": "^6.1.11",
@@ -65,12 +67,11 @@
     "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^16.1.2",
     "mockjs": "^1.1.0",
+    "swagger-ui-dist": "^5.27.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3",
     "umi-presets-pro": "^2.0.3",
-    "umi-serve": "^1.9.11",
-    "@biomejs/biome": "^2.1.1",
-    "@types/node": "^24.0.13"
+    "umi-serve": "^1.9.11"
   },
   "engines": {
     "node": ">=20.0.0"
